# FlashGBX

./: CHANGES.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-appimage.yaml  build-macos.yaml  build-windows.yaml
FlashGBX/: CartridgeTypes.py  DataTransfer.py  DumpReport.py  FlashGBX.py  FlashGBX_CLI.py  FlashGBX_GUI.py  Flashcart.py  Formatter.py  GBMemory.py  IniSettings.py  InteractiveConsole.py  InteractiveConsoleWindow.py  LK_Device.py  Logging.py  Mapper.py  PocketCamera.py  PocketCameraWindow.py  Progress.py  RomFileAGB.py  RomFileDMG.py  UserInputDialog.py  app.py  hw_GBFlash.py  hw_GBxCartRW.py  hw_GameBub.py  hw_JoeyJr.py  i18n.py  pyside.py
FlashGBX/config/: db_AGB.json  db_DMG.json  db_DMG_bl.json  fc_AGB_GL04GR00FHCR2.txt  fc_AGB_M29W640.txt  fc_DMG_256M29EWH.txt  fc_DMG_39VF1681.txt  fc_DMG_ChisFlash-MBC5-PLUS.txt  fc_DMG_GB_Memory.txt
FlashGBX/locale/: de.po  messages.pot
FlashGBX/res/: Third Party Notices.md
